<resources>
    <string name="app_name">Companion</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_new_trip">شروع سفر جدید</string>
    <string name="password">رمز عبور</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="enter">ورود</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="repeatPassword">تکرار رمز عبور</string>
    <string name="sign_up">ثبت نام</string>
    <string name="new_to_companion">کاربر جدید هستید؟  </string>
    <string name="register">ثبت نام کنید</string>
    <string name="forgot_password">فراموشی رمز؟</string>
    <string name="watching_trips">سفرهای تحت مراقبت</string>
<<<<<<< HEAD
    <string name="emergency">وضعیت اضطراری</string>
    <string name="call">تماس</string>
    <string name="emergency_toast">وضعیت شما اطلاع داده شد</string>
=======
    <string name="add_contact">اضافه کردن</string>
>>>>>>> 41b0299879681a078b8948222fd262bf1b1e95b4
</resources>
