<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/White"
        android:layout_gravity="center|center_vertical">

    <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/no_picture"
            android:background="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            android:id="@+id/add_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/name_text_input"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/family_text_input"
            app:layout_constraintTop_toBottomOf="@+id/add_image">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/family_text_input"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/family"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_text_input"
            app:layout_constraintEnd_toEndOf="@+id/name_text_input"
            app:layout_constraintStart_toStartOf="@+id/name_text_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/phone_number_text_input">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/family_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_text_input"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/family_text_input"
            app:layout_constraintEnd_toEndOf="@+id/family_text_input"
            app:layout_constraintStart_toStartOf="@+id/family_text_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/signup_password_text_input">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password_text_input"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_text_input"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_text_input"
            app:layout_constraintStart_toStartOf="@+id/phone_number_text_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/repeat_password_text_input">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_text_input"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/repeatPassword"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_password_text_input"
            app:layout_constraintEnd_toEndOf="@+id/signup_password_text_input"
            app:layout_constraintStart_toStartOf="@+id/signup_password_text_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/login">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:cornerRadius="16dp"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/repeat_password_text_input"
            app:layout_constraintEnd_toEndOf="@+id/repeat_password_text_input"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password_text_input"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>