<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/white"
                                                   android:orientation="vertical">

    <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/no_picture"
            android:id="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/email_text_input"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/password_text_input"
            app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/TextInputLayout"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/email_text_input"
            app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            app:cornerRadius="16dp"
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="@+id/password_text_input"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/password_text_input"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.48"/>


</androidx.constraintlayout.widget.ConstraintLayout>